--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -4142,6 +4142,59 @@
         <td>&nbsp;</td>
         <tr><td>&nbsp;</td></tr>
 
+
+       
+        <tr class="container" id="k5">
+          <td style="vertical-align:top">
+            <!-- <img border="0" width="162" height="142.4" src="./MMDO_FILES/lzc.png"> -->
+            <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
+              <a href="https://www.cs.cityu.edu.hk/~zhichalu/" target="_blank"></a>
+              <br><span style="font-size: 12px;"></span>
+              <br><span style="font-size: 12px;"></span>
+            </span>
+          </td>
+          <td>&nbsp;&nbsp;&nbsp;</td>
+          <td style="vertical-align:top; padding: 0px 23px;">
+            <h5 style="margin-top:0">
+              <p style="font-size: 16px;"><b>Talk Title: TBD</b></p>
+
+              <span>
+                <!-- <b>Biography</b> -->
+                <br>TBD
+
+              </span>
+            </h5>
+          </td>
+        </tr>
+
+        <td>&nbsp;</td>
+        <tr><td>&nbsp;</td></tr>
+
+        <tr class="container" id="k5">
+          <td style="vertical-align:top">
+            <!-- <img border="0" width="162" height="142.4" src="./MMDO_FILES/lzc.png"> -->
+            <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
+              <a href="https://www.cs.cityu.edu.hk/~zhichalu/" target="_blank"></a>
+              <br><span style="font-size: 12px;"></span>
+              <br><span style="font-size: 12px;"></span>
+            </span>
+          </td>
+          <td>&nbsp;&nbsp;&nbsp;</td>
+          <td style="vertical-align:top; padding: 0px 23px;">
+            <h5 style="margin-top:0">
+              <p style="font-size: 16px;"><b>Talk Title: TBD</b></p>
+
+              <span>
+                <!-- <b>Biography</b> -->
+                <br>TBD
+
+              </span>
+            </h5>
+          </td>
+        </tr>
+
+
+      <!--
         <tr class="container" id="k5">
           <td style="vertical-align:top">
             <img border="0" width="156" height="195" src="./MMDO_FILES/ryz.png">
@@ -4157,7 +4210,6 @@
               <p style="font-size: 16px;"><b>Talk Title: The Theory of Multi-View Learning and Its Applications</b></p>
 
               <span>
-                <!-- <b>Biography</b> -->
                 <br>Yazhou Ren is currently an Associate Professor with the School of Computer Science and Engineering,
                 University of Electronic Science and Technology of China (UESTC), Chengdu, China. He received the B.Sc.
                 degree in information and computation science and the Ph.D. degree in computer science from the South
@@ -4198,13 +4250,14 @@
               <p style="font-size: 16px;"><b>Talk Title: Large Language Models for Algorithm Design</b></p>
 
               <span>
-                <!-- <b>Biography</b> -->
                 <br>TBD
 
               </span>
             </h5>
           </td>
         </tr>
+
+      -->
 
       </tbody>
     </table>
