--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -3877,7 +3877,7 @@
       <br>
       <br><b>Final Submission Deadline</b>: <span style="text-decoration: line-through">March 31, 2025</span>
       <br><b>Notification Due</b>: <span style="text-decoration: line-through">April 1, 2025</span>
-      <br><b style="color:red">Workshop Date</b>: <span style="color:red">TBD</span>
+      <br><b style="color:red">Workshop Date</b>: <span style="color:red">May 9, 2025</span>
       <br><b>Venue</b>: Hangzhou International Expo Center, Hangzhou, China
       <!--<br><b>Book Chapter Version Due</b>: June 15, 2024 (23:59:59 AoE)-->
       <br>
@@ -3949,29 +3949,49 @@
 
 
         <tr>
-          <td align="center" style="vertical-align:top">08:45 am – 09:00 am</td>
+          <td align="center" style="vertical-align:top">10:20 am – 10:30 am</td>
           <td><b>Opening Remarks</b></td>
         </tr>
         <tr>
-          <td align="center" style="vertical-align:top">09:00 am – 09:45 am</td>
+          <td align="center" style="vertical-align:top">10:30 am – 11:15 am</td>
           <td><b>Keynote 1:</b> <a href="#section1" target="_blank">
               Data-driven Federated Optimisation: From Small Surrogates to LLMs</a>, by Yaochu Jin</td>
         </tr>
         <tr>
-          <td align="center" style="vertical-align:top">09:45 am – 10:30 am</td>
+          <td align="center" style="vertical-align:top">11:15 am – 12:00 pm</td>
           <td><b>Keynote 2:</b> TBD
         </tr>
         <tr>
-          <td align="center" style="vertical-align:top">10:30 am – 10:45 am</td>
-          <td><b>Coffee Break</b></td>
+          <td align="center" style="vertical-align:top">12:00 pm – 14:00 pm</td>
+          <td><b>Lunch Break</b></td>
         </tr>
+
         <tr>
-          <td align="center" style="vertical-align:top">10:45 am – 11:30 am</td>
+          <td align="center" style="vertical-align:top">14:00 pm – 14:30 pm</td>
           <td><b>Keynote 3:</b> TBD
         </tr>
         <tr>
-          <td align="center" style="vertical-align:top">11:30 am – 12:30 pm</td>
-          <td><b>Oral Presentation Session 1</b> (12 min per talk + 3 min Q&amp;A)</td>
+          <td align="center" style="vertical-align:top">14:30 pm – 15:00 pm</td>
+          <td><b>Keynote 4:</b> <a href="#section1" target="_blank">The Theory of Multi-View Learning and Its
+              Applications</a>, by Yazhou Ren</td>
+        </tr>
+        <tr>
+          <td align="center" style="vertical-align:top">15:00 pm – 15:30 pm</td>
+          <td><b>Keynote 5:</b> <a href="#k5" target="_blank">Automated Algorithm Design with Large Language Models</a>, by Zhichao Lu</td>
+        </tr>
+        <tr>
+          <td align="center" style="vertical-align:top">15:30 pm – 16:00 pm</td>
+          <td><b>Keynote 6:</b> TBD
+        </tr>
+
+        <tr>
+          <td align="center" style="vertical-align:top">16:00 pm – 16:20 pm</td>
+          <td><b>Coffee Break</b></td>
+        </tr>
+
+        <tr>
+          <td align="center" style="vertical-align:top">16:20 pm – 17:50 pm</td>
+          <td><b>Oral Presentation Session 1</b> (10 min per talk + 2 min Q&amp;A)</td>
         </tr>
         <tr>
           <td align="center" style="vertical-align:top"></td>
@@ -3988,25 +4008,27 @@
               </li>
               <li>Gan-yi Tang, Gui-Fu Lu, Fumiva lida. Tensorized
                 multi-view subspace clustering by tensor nuclear norm and block diagonal representation</li>
+              <li>Yue Xie, Fumiya Iida, Kai-Fung Chu, Xing Wang. The Morphology-Control Trade-Off: Insights into Soft
+                Robotic Efficiency</li>
+              <li>Jintai Chen, Fangqing Liu, Xueming Yan, Han Huang. Regionalized Metric Framework: A Novel Approach for
+                Evaluating Multimodal
+                Multi-Objective Optimization Algorithms</li>
+              <li>Gao You, Tao Qian. Investigation on
+                Convergence Efficiency of Two-dimensional Adaptive Fourier Decompositions in Image Approximation
+              </li>
+              <li>Yazhi Li. A hybrid harmony search for
+                distributed permutation flowshop scheduling with multimodal optimization</li>
             </ol>
           </td>
         </tr>
-        <tr>
-          <td align="center" style="vertical-align:top">12:30 pm – 14:00 pm</td>
-          <td><b>Lunch Break</b></td>
-        </tr>
-        <tr>
-          <td align="center" style="vertical-align:top">14:00 pm – 14:30 pm</td>
-          <td><b>Keynote 4:</b> <a href="#section1" target="_blank">The Theory of Multi-View Learning and Its
-              Applications</a>, by Yazhou Ren</td>
-        </tr>
-        <tr>
-          <td align="center" style="vertical-align:top">14:30 pm – 15:00 pm</td>
-          <td><b>Keynote 5:</b> <a href="#section1" target="_blank">Large Language Models for Algorithm
-              Design</a>, by Zhichao Lu</td>
-        </tr>
-        <tr>
-          <td align="center" style="vertical-align:top">15:00 pm – 15:30 pm</td>
+
+
+
+
+
+
+        <!-- <tr>
+          <td align="center" style="vertical-align:top">16:50 pm – 17:50 pm</td>
           <td><b>Oral Presentation Session 2</b> (12 min per talk + 3 min Q&amp;A)</td>
         </tr>
         <tr>
@@ -4018,14 +4040,15 @@
               <li>Jintai Chen, Fangqing Liu, Xueming Yan, Han Huang. Regionalized Metric Framework: A Novel Approach for
                 Evaluating Multimodal
                 Multi-Objective Optimization Algorithms</li>
+              <li>Gao You, Tao Qian. Investigation on
+                Convergence Efficiency of Two-dimensional Adaptive Fourier Decompositions in Image Approximation
+              </li>
+              <li>Yazhi Li. A hybrid harmony search for
+                distributed permutation flowshop scheduling with multimodal optimization</li>
             </ol>
           </td>
-        </tr>
-        <tr>
-          <td align="center" style="vertical-align:top">15:30 pm – 16:00 pm</td>
-          <td><b>Coffee Break</b></td>
-        </tr>
-        <tr>
+        </tr> -->
+        <!-- <tr>
           <td align="center" style="vertical-align:top"></td>
           <td>
             <ol start="7">
@@ -4036,9 +4059,9 @@
                 distributed permutation flowshop scheduling with multimodal optimization</li>
             </ol>
           </td>
-        </tr>
+        </tr> -->
         <tr>
-          <td align="center" style="vertical-align:top">16:30 pm – 16:45 pm</td>
+          <td align="center" style="vertical-align:top">17:50 pm – 18:00 pm</td>
           <td><b>Award Ceremony</b></td>
         </tr>
         <!-- <tr>
@@ -4061,7 +4084,7 @@
           <td style="vertical-align:top">
             <img border="0" width="156" height="195" src="./MMDO_FILES/jyc-clip.png">
             <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
-              <a href="https://en.westlake.edu.cn/faculty/yaochu-jin.html" target="_blank">YaochuJin</a>
+              <a href="https://en.westlake.edu.cn/faculty/yaochu-jin.html" target="_blank">Yaochu Jin</a>
               <br><span style="font-size: 12px;">Chair Professor of AI,</span>
               <br><span style="font-size: 12px;">Westlake University</span>
             </span>
@@ -4231,7 +4254,7 @@
             </h5>
           </td>
         </tr>
-
+ -->
         <td>&nbsp;</td>
         <tr><td>&nbsp;</td></tr>
 
@@ -4240,24 +4263,24 @@
             <img border="0" width="162" height="142.4" src="./MMDO_FILES/lzc.png">
             <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
               <a href="https://www.cs.cityu.edu.hk/~zhichalu/" target="_blank">Zhichao Lu</a>
-              <br><span style="font-size: 12px;">Associate Professor,</span>
-              <br><span style="font-size: 12px;">City University of Hong Kong (CityUHK)</span>
+              <br><span style="font-size: 12px;">Department of Computer Science,</span>
+              <br><span style="font-size: 12px;">City University of Hong Kong</span>
             </span>
           </td>
           <td>&nbsp;&nbsp;&nbsp;</td>
           <td style="vertical-align:top; padding: 0px 23px;">
             <h5 style="margin-top:0">
-              <p style="font-size: 16px;"><b>Talk Title: Large Language Models for Algorithm Design</b></p>
+              <p style="font-size: 16px;"><b>Talk Title: Automated Algorithm Design with Large Language Models</b></p>
 
               <span>
-                <br>TBD
+                Dr. Zhichao Lu is currently an Assistant Professor in Department of Computer Science at City University of Hong Kong. He received Ph.D degree in Electrical and Computer Engineering from Michigan State University in 2020. In the broad context of AI, the Dr. Lu's research focuses on the intersections of evolutionary computation, learning, and optimization, notably on developing efficient and trustworthy ML/DL algorithms and systems, with the overarching goal of making AI accessible to everyone. Over the past five years, his research endeavors have yielded over 40 high-quality papers published in premier conferences and prestigious journals, which are advancing and continuously impacting the related fields, as evidenced by a couple of Best Paper Awards (from IEEE-CCF and GECCO 2019) and the growing citations.
 
               </span>
             </h5>
           </td>
         </tr>
 
-      -->
+     
 
       </tbody>
     </table>
@@ -4642,8 +4665,7 @@
                     src="./MMDO_FILES/cry.jpg"></a>
                 <div style="text-align:left">
                   <a href="https://www.mmdo.org.cn/workshop/cec2025/" target="_blank"
-                    style="display: inline-block; margin-bottom: 7px;">Runyang Cai</a><br>Master student,<br>Computer
-                  Science & Engineering,<br>Guangdong University of Foreign Studies
+                    style="display: inline-block; margin-bottom: 7px;">Runyang Cai</a><br>Master student,<br>School of Information Science and Technology,<br>Guangdong University of Foreign Studies
                 </div>
               </div>
             </td>
@@ -4661,7 +4683,7 @@
 
   <br>
 
-  <div class="container">
+  <!-- <div class="container">
     <h3>Organized by</h3>
     <div class="overview" style="text-align: center;">
       <a href="https://en.westlake.edu.cn/" target="_blank"><img border="0" height="72" width="216"
@@ -4673,10 +4695,33 @@
     </div>
     <br>
     <div class="overview" style="text-align: center;">
+      <a href="https://www.dhu.edu.cn/" target="_blank"><img border="0" style="padding-left: 50px;"
+        src="./MMDO_FILES/donghua.png"></a>
       <a href="https://mmdo.org.cn/workshop/cec2025/" target="_blank"><img border="0" height="80" width="280"
           src="./MMDO_FILES/kexin-new.png"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="https://cis.ieee.org/" target="_blank"><img border="0" height="72" width="216"
           src="./MMDO_FILES/cis-logo.png"></a>
+    </div>
+  </div> -->
+
+  
+  <div class="container">
+    <h3>Organized by</h3>
+    <div class="overview" style="text-align: center;display: flex; flex-direction: row;">
+      <div style="display: flex; flex-direction: column;">
+        <a href="https://en.westlake.edu.cn/" target="_blank" style="padding-bottom: 20px;padding-left: 20px"><img border="0" height="72" width="216" src="./MMDO_FILES/wlu_logo.png"></a>
+        <a href="https://www.dhu.edu.cn/" target="_blank"><img border="0" src="./MMDO_FILES/donghua.png"  height="90" width="90"></a>
+      </div>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <div style="display: flex; flex-direction: column;">
+        <a href="https://www.gdufs.edu.cn/" target="_blank" style="padding-bottom: 20px;padding-left: 20px"><img border="0" height="72" width="330" src="./MMDO_FILES/gw_logo.png"></a>
+        <a href="https://mmdo.org.cn/workshop/cec2025/" target="_blank"><img border="0" height="80" width="280" src="./MMDO_FILES/kexin-new.png"></a>
+      </div>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <div style="display: flex; flex-direction: column;">
+        <a href="https://www2.lehigh.edu/" target="_blank" style="padding-bottom: 20px;padding-left: 20px"><img border="0" height="72" width="270" src="./MMDO_FILES/lehigh.png"></a>
+        <a href="https://cis.ieee.org/" target="_blank"><img border="0" height="72" width="216" src="./MMDO_FILES/cis-logo.png"></a>
+      </div>
     </div>
   </div>
 
