--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -3877,8 +3877,8 @@
       <br>
       <br><b>Final Submission Deadline</b>: <span style="text-decoration: line-through">March 31, 2025</span>
       <br><b>Notification Due</b>: <span style="text-decoration: line-through">April 1, 2025</span>
-      <br><b style="color:red">Workshop Date</b>: <span style="color:red">May 9, 2025</span>
-      <br><b>Venue</b>: Hangzhou International Expo Center, Hangzhou, China
+      <br><b>Workshop Date</b>: <span>June 9, 2025</span>
+      <br><b>Venue</b>: HEIC103A, 1F, Hangzhou International Expo Center, Hangzhou, China
       <!--<br><b>Book Chapter Version Due</b>: June 15, 2024 (23:59:59 AoE)-->
       <br>
     </div>
@@ -3926,8 +3926,8 @@
 
     <table style="font-size:14; width:100%; border: 1px solid blue; border-spacing: 2px;table-layout: fixed;border-collapse: separate;" id="agenda">
       <colgroup>
-        <col span="1" style="width: 15%;">
-        <col span="1" style="width: 85%;">
+        <col span="1" style="width: 17%;">
+        <col span="1" style="width: 83%;">
       </colgroup>
       <tbody>
         <style>
