--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -3972,17 +3972,19 @@
         </tr>
         <tr>
           <td align="center" style="vertical-align:top">14:30 pm – 15:00 pm</td>
-          <td><b>Keynote 4:</b> <a href="#section1" target="_blank">The Theory of Multi-View Learning and Its
-              Applications</a>, by Yazhou Ren</td>
+          <td><b>Keynote 4:</b> <a href="#k4" target="_blank">TBD
+            </a>, by Han Huang</td>
         </tr>
         <tr>
           <td align="center" style="vertical-align:top">15:00 pm – 15:30 pm</td>
-          <td><b>Keynote 5:</b> <a href="#k5" target="_blank">Automated Algorithm Design with Large Language Models</a>, by Zhichao Lu</td>
+          <td><b>Keynote 5:</b> <a href="#k5" target="_blank">The Theory of Multi-View Learning and Its
+              Applications</a>, by Yazhou Ren</td>
         </tr>
         <tr>
           <td align="center" style="vertical-align:top">15:30 pm – 16:00 pm</td>
-          <td><b>Keynote 6:</b> TBD
+          <td><b>Keynote 6:</b> <a href="#k6" target="_blank">Automated Algorithm Design with Large Language Models</a>, by Zhichao Lu</td>
         </tr>
+
 
         <tr>
           <td align="center" style="vertical-align:top">16:00 pm – 16:20 pm</td>
@@ -4167,13 +4169,13 @@
 
 
        
-        <tr class="container" id="k5">
+        <tr class="container" id="k4">
           <td style="vertical-align:top">
-            <!-- <img border="0" width="162" height="142.4" src="./MMDO_FILES/lzc.png"> -->
+            <img border="0" width="156" height="176" src="./MMDO_FILES/hh.png">
             <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
-              <a href="https://www.cs.cityu.edu.hk/~zhichalu/" target="_blank"></a>
-              <br><span style="font-size: 12px;"></span>
-              <br><span style="font-size: 12px;"></span>
+              <a href="https://www.cs.cityu.edu.hk/~zhichalu/" target="_blank">Han Huang</a>
+              <br><span style="font-size: 12px;">Professor,</span>
+              <br><span style="font-size: 12px;">South China University of Technology</span>
             </span>
           </td>
           <td>&nbsp;&nbsp;&nbsp;</td>
@@ -4258,7 +4260,7 @@
         <td>&nbsp;</td>
         <tr><td>&nbsp;</td></tr>
 
-        <tr class="container" id="k5">
+        <tr class="container" id="k6">
           <td style="vertical-align:top">
             <img border="0" width="162" height="142.4" src="./MMDO_FILES/lzc.png">
             <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
