--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -3954,7 +3954,7 @@
         </tr>
         <tr>
           <td align="center" style="vertical-align:top">10:30 am – 11:15 am</td>
-          <td><b>Keynote 1:</b> <a href="#section1" target="_blank">
+          <td><b>Keynote 1:</b> <a href="#section1">
               Data-driven Federated Optimisation: From Small Surrogates to LLMs</a>, by Yaochu Jin</td>
         </tr>
         <tr>
@@ -3972,17 +3972,17 @@
         </tr>
         <tr>
           <td align="center" style="vertical-align:top">14:30 pm – 15:00 pm</td>
-          <td><b>Keynote 4:</b> <a href="#k4" target="_blank">TBD
+          <td><b>Keynote 4:</b> <a href="#k4">TBD
             </a>, by Han Huang</td>
         </tr>
         <tr>
           <td align="center" style="vertical-align:top">15:00 pm – 15:30 pm</td>
-          <td><b>Keynote 5:</b> <a href="#k5" target="_blank">The Theory of Multi-View Learning and Its
+          <td><b>Keynote 5:</b> <a href="#k5">The Theory of Multi-View Learning and Its
               Applications</a>, by Yazhou Ren</td>
         </tr>
         <tr>
           <td align="center" style="vertical-align:top">15:30 pm – 16:00 pm</td>
-          <td><b>Keynote 6:</b> <a href="#k6" target="_blank">Automated Algorithm Design with Large Language Models</a>, by Zhichao Lu</td>
+          <td><b>Keynote 6:</b> <a href="#k5">Automated Algorithm Design with Large Language Models</a>, by Zhichao Lu</td>
         </tr>
 
 
@@ -4195,9 +4195,9 @@
         <td>&nbsp;</td>
         <tr><td>&nbsp;</td></tr>
 
-        <tr class="container" id="k5">
+        <!-- <tr class="container" id="k5">
           <td style="vertical-align:top">
-            <!-- <img border="0" width="162" height="142.4" src="./MMDO_FILES/lzc.png"> -->
+            <img border="0" width="162" height="142.4" src="./MMDO_FILES/lzc.png">
             <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
               <a href="https://www.cs.cityu.edu.hk/~zhichalu/" target="_blank"></a>
               <br><span style="font-size: 12px;"></span>
@@ -4210,16 +4210,14 @@
               <p style="font-size: 16px;"><b>Talk Title: TBD</b></p>
 
               <span>
-                <!-- <b>Biography</b> -->
                 <br>TBD
 
               </span>
             </h5>
           </td>
-        </tr>
+        </tr> -->
 
 
-      <!--
         <tr class="container" id="k5">
           <td style="vertical-align:top">
             <img border="0" width="156" height="195" src="./MMDO_FILES/ryz.png">
@@ -4256,7 +4254,7 @@
             </h5>
           </td>
         </tr>
- -->
+        
         <td>&nbsp;</td>
         <tr><td>&nbsp;</td></tr>
 
@@ -4274,7 +4272,7 @@
             <h5 style="margin-top:0">
               <p style="font-size: 16px;"><b>Talk Title: Automated Algorithm Design with Large Language Models</b></p>
 
-              <span>
+              <span><br>
                 Dr. Zhichao Lu is currently an Assistant Professor in Department of Computer Science at City University of Hong Kong. He received Ph.D degree in Electrical and Computer Engineering from Michigan State University in 2020. In the broad context of AI, the Dr. Lu's research focuses on the intersections of evolutionary computation, learning, and optimization, notably on developing efficient and trustworthy ML/DL algorithms and systems, with the overarching goal of making AI accessible to everyone. Over the past five years, his research endeavors have yielded over 40 high-quality papers published in premier conferences and prestigious journals, which are advancing and continuously impacting the related fields, as evidenced by a couple of Best Paper Awards (from IEEE-CCF and GECCO 2019) and the growing citations.
 
               </span>
