--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -3972,8 +3972,8 @@
         </tr>
         <tr>
           <td align="center" style="vertical-align:top">14:30 pm – 15:00 pm</td>
-          <td><b>Keynote 4:</b> <a href="#k4">TBD
-            </a>, by Han Huang</td>
+          <td><b>Keynote 4:</b> <a href="#k4">Micro-scale searching algorithm and its 
+            application</a>, by Han Huang</td>
         </tr>
         <tr>
           <td align="center" style="vertical-align:top">15:00 pm – 15:30 pm</td>
@@ -4181,11 +4181,11 @@
           <td>&nbsp;&nbsp;&nbsp;</td>
           <td style="vertical-align:top; padding: 0px 23px;">
             <h5 style="margin-top:0">
-              <p style="font-size: 16px;"><b>Talk Title: TBD</b></p>
+              <p style="font-size: 16px;"><b>Talk Title: Micro-scale searching algorithm and its application</b></p>
 
               <span>
                 <!-- <b>Biography</b> -->
-                <br>TBD
+                <br>Dr. Huang is a professor and doctoral supervisor of the School of Software Engineering at South China University of Technology. He is an associate editor of IEEE TEVC, CAIS and IEEE TETCI, and Director of Teaching Steering Committee for Software Engineering of Undergraduate Colleges and Universities in Guangdong Province. He has proposed a time complexity analysis method of real-world evolutionary algorithms, algorithms for efficient and accurate image matting, a method for automated test case generation based on path coverage, etc. Prof. Huang has hosted more than twenty national and provincial projects. He has published three books and more than 80 papers in IEEE TCYB, IEEE TETC, IEEE TSE, IEEE TEVC, IEEE TIP, IEEE TFS, and Science China, including ESI highly cited papers. He has 50 invention patents granted in China and seven invention patents granted in the US as the first inventor. He won China Patent Excellence Award and developed an asociation standard as the first contributor. Prof. Huang has given more than 50 public lectures on science and technology in the past five years. He has been in charge of the development and release of six public software systems, providing free technical service and support for researchers and engineers.
 
               </span>
             </h5>
