--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -3968,7 +3968,7 @@
 
         <tr>
           <td align="center" style="vertical-align:top">14:00 pm – 14:30 pm</td>
-          <td><b>Keynote 3:</b> TBD
+          <td><b>Keynote 3:</b>  <a href="#k3">Expensive Optimization via Relation</a>, by Aimin Zhou</td>
         </tr>
         <tr>
           <td align="center" style="vertical-align:top">14:30 pm – 15:00 pm</td>
@@ -4082,7 +4082,7 @@
     <table>
       <tbody>
 
-        <tr class="container" id="k2">
+        <tr class="container" id="k1">
           <td style="vertical-align:top">
             <img border="0" width="156" height="195" src="./MMDO_FILES/jyc-clip.png">
             <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
@@ -4119,7 +4119,7 @@
         <td>&nbsp;</td>
         <tr><td>&nbsp;</td></tr>
 
-        <tr class="container" id="k3">
+        <tr class="container" id="k2">
           <td style="vertical-align:top">
             <img border="0" width="156" height="156" src="./MMDO_FILES/oys.png">
             <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
@@ -4146,7 +4146,7 @@
 
         <tr class="container" id="k3">
           <td style="vertical-align:top">
-            <img border="0" width="156" height="195" src="./MMDO_FILES/za.png">
+            <img border="0" width="156" height="195" src="./MMDO_FILES/za_new.png">
             <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
               <a href="https://www.mmdo.org.cn/workshop/cec2025/" target="_blank">Aimin Zhou</a>
               <br><span style="font-size: 12px;">Professor,</span>
@@ -4156,10 +4156,10 @@
           <td>&nbsp;&nbsp;&nbsp;</td>
           <td style="vertical-align:top; padding: 0px 23px;">
             <h5 style="margin-top:0">
-              <p style="font-size: 16px;"><b>Talk Title: TBD</b></p>
+              <p style="font-size: 16px;"><b>Talk Title: Expensive Optimization via Relation</b></p>
               <span>
                 <!-- <b>Biography</b> -->
-                <br>TBD
+                <br>Prof. Aimin Zhou is currently the dean of the Shanghai Institute of Artificial Intelligence for Education, East China Normal University, China. His research interests include machine learning and intelligent education. He has authored over 80 peer-reviewed papers, which have been cited more than 11000 times on Google Scholar. He has been awarded the Highly Cited Chinese Researchers by Elsevier from 2020 to 2024. Prof. Zhou is an Associate Editor of Swarm and Evolutionary Computation and an Editorial Board Member of Complex and Intelligent Systems, Chinese Journal of Electronics, and Computer Education.
               </span>
             </h5>
           </td>
